Docker mongoDB
Signed-off-by: j3rwin <jerwin.j@cgi.com>